--- a/client/components/login_form/login_form.html
+++ b/client/components/login_form/login_form.html
@@ -15,7 +15,7 @@
         <div class="forms">
           <form role="form" hidden="hidden" class="form signup">
             <div class="form-group">
-              <input type="text" placeholder="Name" class="form-control name"/>
+              <input type="name" placeholder="Name" class="form-control name"/>
             </div>
             <div class="form-group">
               <input type="email" placeholder="Email" class="form-control email"/>
